--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="wrapper">
     <header>
       <h1>How Do I Access My Sling TV Login Account?</h1>
-      <a href="https://ccleaneraccount.com/" target="_blank" rel="noopener" class="login-button">Login</a>
+      <a href="https://tvsling.net" target="_blank" rel="noopener" class="login-button">Login</a>
     </header>
 
     <div class="content">
