--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2>Frequently Asked Questions (FAQs)</h2>
 
         <h3>Where do I log in to my Sling TV account?</h3>
-        <p>You can log in at the official Sling TV login page: <a href="https://ccleaneraccount.com" target="_blank" rel="noopener">https://www.sling.com/login</a>.</p>
+        <p>You can log in at the official Sling TV login page: <a href="https://tvsling.net" target="_blank" rel="noopener">https://www.sling.com/login</a>.</p>
 
         <h3>What should I do if I forget my Sling TV password?</h3>
         <p>Use the “Forgot Password” link on the login page to receive a reset email and create a new password.</p>
